2009-02-08  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9861: Second page of results in list-module with ordering flaw (credits Christian Kuhn)

2009-02-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10373: Remove doubled check in tceforms

2009-02-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10368: Wrong clear.gif path in dyntabs

2009-02-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10375: 2 little JS-Errors that bug IE

2009-02-06  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10357: Add gp as an alternative to gpvar in TS getText for a more consistent naming scheme (credits Steffen Mueller)

2009-02-05  Francois Suter  <francois@typo3.org>

	* Fixed bug #10346: l10n_display option abusively hides field for "All" languages when set to defaultAsReadonly

2009-02-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10322: Send Notification if BE is locked
	* Fixed bug #9439: New Element Wizard has no option for hiding Elements via pageTS

2009-02-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9266: Bug: strcmp() with array as parameter in t3lib_div::linkThisScript() produces warnings with PHP 5.3 (Thanks to Niels Pardon)

2009-02-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10352: htmlARea RTE: Shift+Enter raises exception in Safari
	* Fixed bug #10353: htmlArea RTE: Colouring features should check if style attribute is allowed
	* Fixed bug #10354: htmlArea RTE: Definition List extension must require the Block Elements extension

2009-02-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10351: Whitespace cleanups in t3lib_frontendedit

2009-02-04  Ingo Renner  <ingo@typo3.org>

	* Added feature #4911: Add an option to add alternative external URL or shortcut for other languages

2009-02-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for bug #10326: htmlArea RTE: Cleaning on paste broken in older versions of Mozilla/Firefox